Fix <rdar://5133816> keepWebHistory is not implemented
 WebCore:

         Add wrappers around CoCreateInstance to COMPtr

         I followed the example of the Query constructor and query method by
         adding a Create constructor and create method.

         Reviewed by Darin.

         * platform/win/COMPtr.h:
         (COMPtr::COMPtr): Added a new constructor that calls
         CoCreateInstance.
         (COMPtr::create): Added.
         (COMPtr::createInstance): Added.

 WebKitTools:

         Fix <rdar://5133816> keepWebHistory is not implemented

         Fixes fast/history/clicked-link-is-visited.html.

         Reviewed by Darin.

         * DumpRenderTree/win/DumpRenderTree.cpp:
         (runTest): Clear the optionalSharedHistory.
         * DumpRenderTree/win/LayoutTestControllerWin.cpp:
         (LayoutTestController::keepWebHistory): Set the optionalSharedHistory.

 LayoutTests:

         Remove a now-passing test from the Windows Skipped file

         Reviewed by Darin.

         * platform/win/Skipped:


git-svn-id: http://svn.webkit.org/repository/webkit/trunk@27691 268f45cc-cd09-0410-ab3c-d52691b4dbfc

--- a/WebCore/ChangeLog
+++ b/WebCore/ChangeLog
@@ -1,3 +1,18 @@
+2007-11-11  Adam Roben  <aroben@apple.com>
+
+        Add wrappers around CoCreateInstance to COMPtr
+
+        I followed the example of the Query constructor and query method by
+        adding a Create constructor and create method.
+
+        Reviewed by Darin.
+
+        * platform/win/COMPtr.h:
+        (COMPtr::COMPtr): Added a new constructor that calls
+        CoCreateInstance.
+        (COMPtr::create): Added.
+        (COMPtr::createInstance): Added.
+
 2007-11-11  Alexey Proskuryakov  <ap@nypop.com>
 
         Reviewed by Darin.
