--- a/LayoutTests/ChangeLog
+++ b/LayoutTests/ChangeLog
@@ -1,3 +1,11 @@
+2007-11-11  Adam Roben  <aroben@apple.com>
+
+        Remove a now-passing test from the Windows Skipped file
+
+        Reviewed by Darin.
+
+        * platform/win/Skipped:
+
 2007-11-10  Darin Adler  <darin@apple.com>
 
         * platform/win/fast/dom/Window/window-properties-expected.txt: Update for
