Partial fix for <rdar://problem/5585334> numfuzz: integer overflows opening malformed SVG file in WebCore::ImageBuffer::create
Reviewed By Eric.

Unfortunately this is a very slight regression, but is unavoidable.


git-svn-id: http://svn.webkit.org/repository/webkit/trunk@27698 268f45cc-cd09-0410-ab3c-d52691b4dbfc

--- a/JavaScriptCore/ChangeLog
+++ b/JavaScriptCore/ChangeLog
@@ -1,3 +1,13 @@
+2007-11-11  Oliver Hunt  <oliver@apple.com>
+
+        Reviewed by Eric.
+
+        Partial fix for <rdar://problem/5585334> numfuzz: integer overflows opening malformed SVG file in WebCore::ImageBuffer::create
+
+        Unfortunately this is a very slight regression, but is unavoidable.
+
+        * wtf/FastMalloc.cpp:
+
 2007-11-10  Eric Seidel  <eric@webkit.org>
 
         Reviewed by darin.
