--- a/WebCore/ChangeLog
+++ b/WebCore/ChangeLog
@@ -1,3 +1,16 @@
+2007-11-11  Dan Bernstein  <mitz@apple.com>
+
+        Reviewed by Adam Roben.
+
+        - fix http://bugs.webkit.org/show_bug.cgi?id=15942
+          REGRESSION: Selecting "Edit Html" tab in Blogger causes crash (Assertion failed: isRange())
+
+        Test: editing/selection/cleared-by-relayout.html
+
+        * editing/Selection.cpp:
+        (WebCore::Selection::toRange): Check if the selection has been cleared
+        by updating layout.
+
 2007-11-11  Darin Adler  <darin@apple.com>
 
         Reviewed by Mark Rowe.
