--- a/JavaScriptCore/ChangeLog
+++ b/JavaScriptCore/ChangeLog
@@ -1,3 +1,9 @@
+2007-11-12  Adam Roben  <aroben@apple.com>
+
+        Build fix
+
+        * wtf/FastMalloc.h: Add missing using statement.
+
 2007-11-11  Oliver Hunt  <oliver@apple.com>
 
         Reviewed by Darin.
