Windows build fix
        * WebKit.vcproj/WebKit.def: Export fastZeroedMalloc.
        * WebKit.vcproj/WebKit_debug.def: Ditto.


git-svn-id: http://svn.webkit.org/repository/webkit/trunk@27713 268f45cc-cd09-0410-ab3c-d52691b4dbfc

--- a/WebKit/win/ChangeLog
+++ b/WebKit/win/ChangeLog
@@ -1,3 +1,10 @@
+2007-11-12  Adam Roben  <aroben@apple.com>
+
+        Windows build fix
+
+        * WebKit.vcproj/WebKit.def: Export fastZeroedMalloc.
+        * WebKit.vcproj/WebKit_debug.def: Ditto.
+
 2007-11-09  Jon Honeycutt  <jhoneycutt@apple.com>
 
         Reviewed by Sam.
