--- a/WebKitSite/ChangeLog
+++ b/WebKitSite/ChangeLog
@@ -1,3 +1,7 @@
+2007-11-12  Mark Rowe  <mrowe@apple.com>
+
+        * building/tools.html: Remove extra >.
+
 2007-11-09  Antti Koivisto  <antti@apple.com>
 
         Rubber stamped by bdash.
