Rubber-stamped by Oliver Hunt.
        Landing a few layout tests from http://bugs.webkit.org/show_bug.cgi?id=14868
        Import variable lookup optimizations from KJS

        * fast/js/kde/arguments-scope-expected.txt: Added.
        * fast/js/kde/arguments-scope.html: Added.
        * fast/js/kde/resources/arguments-scope.js: Added.
        * fast/js/kde/resources/scope.js:
        * fast/js/kde/scope-expected.txt:



git-svn-id: http://svn.webkit.org/repository/webkit/trunk@27722 268f45cc-cd09-0410-ab3c-d52691b4dbfc

--- a/LayoutTests/ChangeLog
+++ b/LayoutTests/ChangeLog
@@ -1,3 +1,16 @@
+2007-11-12  Geoffrey Garen  <ggaren@apple.com>
+
+        Rubber-stamped by Oliver Hunt.
+        
+        Landing a few layout tests from http://bugs.webkit.org/show_bug.cgi?id=14868
+        Import variable lookup optimizations from KJS
+
+        * fast/js/kde/arguments-scope-expected.txt: Added.
+        * fast/js/kde/arguments-scope.html: Added.
+        * fast/js/kde/resources/arguments-scope.js: Added.
+        * fast/js/kde/resources/scope.js:
+        * fast/js/kde/scope-expected.txt:
+
 2007-11-11  Dan Bernstein  <mitz@apple.com>
 
         Reviewed by Adam Roben.
