--- a/WebKit/mac/ChangeLog
+++ b/WebKit/mac/ChangeLog
@@ -1,6 +1,6 @@
 2007-11-12  Oliver Hunt  <oliver@apple.com>
 
-        Reviewed by Darin.
+        Reviewed by Darin and Geoff.
 
         <rdar://problem/5522011> The content of the password field of 
         Safari is displayed by reconversion.
