--- a/WebCore/ChangeLog
+++ b/WebCore/ChangeLog
@@ -1,3 +1,57 @@
+2007-11-12  Alexey Proskuryakov  <ap@webkit.org>
+
+        Reviewed by Darin.
+
+        http://bugs.webkit.org/show_bug.cgi?id=15954
+        Move DOM Selection operations out of SelectionController
+
+        No change in functionality.
+
+        * editing/SelectionController.cpp:
+        (WebCore::SelectionController::setSelectedRange):
+        * editing/SelectionController.h:
+        * page/DOMSelection.cpp:
+        (WebCore::DOMSelection::anchorNode):
+        (WebCore::DOMSelection::baseNode):
+        (WebCore::DOMSelection::anchorOffset):
+        (WebCore::DOMSelection::baseOffset):
+        (WebCore::DOMSelection::focusNode):
+        (WebCore::DOMSelection::extentNode):
+        (WebCore::DOMSelection::focusOffset):
+        (WebCore::DOMSelection::extentOffset):
+        (WebCore::DOMSelection::isCollapsed):
+        (WebCore::DOMSelection::type):
+        (WebCore::DOMSelection::rangeCount):
+        (WebCore::DOMSelection::collapse):
+        (WebCore::DOMSelection::collapseToEnd):
+        (WebCore::DOMSelection::collapseToStart):
+        (WebCore::DOMSelection::empty):
+        (WebCore::DOMSelection::setBaseAndExtent):
+        (WebCore::DOMSelection::setPosition):
+        (WebCore::DOMSelection::modify):
+        (WebCore::DOMSelection::extend):
+        (WebCore::DOMSelection::getRangeAt):
+        (WebCore::DOMSelection::removeAllRanges):
+        (WebCore::DOMSelection::addRange):
+        (WebCore::DOMSelection::deleteFromDocument):
+        (WebCore::DOMSelection::containsNode):
+        (WebCore::DOMSelection::selectAllChildren):
+        (WebCore::DOMSelection::toString):
+        * page/DOMSelection.h:
+        Moved all DOM API methods to DOMSelection; changed SelectionController::setSelectedRange()
+        to return its result directly instead of via an ExceptionCode that no caller wanted.
+
+        * editing/Editor.cpp:
+        (WebCore::Editor::deleteRange):
+        (WebCore::Editor::removeFormattingAndStyle):
+        (WebCore::Editor::selectComposition):
+        (WebCore::Editor::setComposition):
+        * html/HTMLInputElement.cpp: (WebCore::HTMLInputElement::defaultEventHandler):
+        Adapted for SelectionController::setSelectedRange() now returning a bool.
+        SelectionController::toString() is no longer avasilable, use plainText() explicitly.
+
+        * WebCore.base.exp: Changed SelectionController::setSelectedRange() signature.
+
 2007-11-12  Dan Bernstein  <mitz@apple.com>
 
         Reviewed by Darin Adler.
